--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "nocache": "^4.0.0",
-    "npm": "^4.7.4"
+    "nodemon": "^3.1.0",
+    "npm": "^10.5.2"
   }
 }
